Added comments for new screens.

--- a/www/app/modern/templates/move.html
+++ b/www/app/modern/templates/move.html
@@ -1,4 +1,9 @@
 <div class="img-push push-lg"></div>
 <div class="sun-postcard text-center">
 	<img src="css/img/modern/znak.png"/>
+	<p class="helvetica-font text-white img-title"
+	   style="font-size: 22px; padding: 0 35px; line-height: 28px; margin-top: 40px; text-align: right;">
+		У канцы 1918 года, перад тым як у Менск вярнуліся бальшавікі, урад БНР выехаў праз Вільню ў Гродна.
+		Гэты горад лічыўся сталіцай БНР да верасня 1919 года.
+	</p>
 </div>
