--- a/www/app/modern/templates/pass.html
+++ b/www/app/modern/templates/pass.html
@@ -2,5 +2,9 @@
 	<img src="css/img/modern/pass_bssr.jpg"/>
 </div>
 <div class="sun-postcard text-center">
+	<p class="img-title helvetica-font text-white"
+	   style="font-size: 22px;padding: 0 46px;line-height: 28px; margin-top: 40px;">
+		Уладальнікі пашпарту БНР маглі жыць у краінах Еўропы, атрымаць візу
+		на пераезд у Амерыку ці вярнуцца на радзіму.</p>
 	<img src="css/img/modern/pass_bnr.jpg"/>
 </div>
