--- a/www/app/soviet/templates/souz.html
+++ b/www/app/soviet/templates/souz.html
@@ -1,4 +1,5 @@
 <div class="img-push"></div>
 <div class="sun-postcard text-center">
+	<p class="img-title text-white truth-font">Борьба с религией во всех её проявлениях</p>
 	<img src="css/img/repression/souz.jpg"/>
 </div>
