--- a/www/app/modern/templates/dzen.html
+++ b/www/app/modern/templates/dzen.html
@@ -1,7 +1,7 @@
 <div class="img-push"></div>
 <div class="sun-postcard text-center">
-	<p class="helvetica-font text-white img-title">
-		Дзень Волi
+	<p class="helvetica-font text-white img-title" style="font-size: 22px">
+		Дзень Волi #25sakavika
 	</p>
 	<img src="css/img/modern/iphone.png"/>
 </div>
