--- a/www/app/modern/templates/kvitki.html
+++ b/www/app/modern/templates/kvitki.html
@@ -1,4 +1,8 @@
 <div class="img-push"></div>
 <div class="sun-postcard text-center">
 	<img src="css/img/modern/kvitki.png"/>
+	<div class="img-title text-white helvetica-font"
+	     style="font-size: 22px; padding: 0 35px; line-height: 28px; margin-top: 40px; text-align: right;">
+		Напрыканцы спэктаклю "Тутэйшыя" на сцэне ўздымаўся бел-чырвона-белы сьцяг. Гэта было не даспадобы афіцыйным уладам.
+	</div>
 </div>
