--- a/www/app/national/templates/novy.html
+++ b/www/app/national/templates/novy.html
@@ -1,4 +1,7 @@
 <div class="img-push"></div>
 <div class="sun-postcard text-center">
+	<p class="antiqua-font img-title" style="font-size: 26px;">
+		Газэта выходзіла два разы на тыдзень лацінкай і кірыліцай
+	</p>
 	<img src="css/img/national/homan.jpg"/>
 </div>
