Added comments for new screens.

--- a/www/app/modern/templates/dzen.html
+++ b/www/app/modern/templates/dzen.html
@@ -3,5 +3,5 @@
 	<p class="helvetica-font text-white img-title" style="font-size: 22px">
 		Дзень Волi #25sakavika
 	</p>
-	<img src="css/img/modern/iphone.png"/>
+	<img src="css/img/modern/iphone.jpeg"/>
 </div>
