Finished national chronicle.

--- a/www/app/national/templates/novy-pull.html
+++ b/www/app/national/templates/novy-pull.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Title</title>
-</head>
-<body>
+<div class="row text-center">
+	<h2 class="pull-title antiqua-font">Кірыліца ці лацінка?</h2>
+</div>
+<div class="row">
+	<p class="pull-review antiqua-font">
+		<span>
+					Яшчэ сто гадоў таму, на пачатку ХХ стагодзьдзя, у газэце “Наша Ніва” разгарэлася палеміка: якім шрыфтам –
+		лацінскім ці кірылічным – маюць карыстацца беларусы? Палеміка пачалася з наступнага звароту рэдакцыі да чытачоў:
+		</span>
+<span>
+			“Прыступаючы да выданьня “Нашае Нівы” пяць гадоў таму назад, Рэдакцыя павінна была перамагчы шмат перашкод,
+		разабраць багата дужа трудных пытаньняў, з каторымі ёй зразу прыйшлося сустрэцца. Перш за ўсё паднялося
+		пытаньне: якімі літарамі друкаваць беларускую газэту? Адны даводзілі, быццам трэба беларусам адразу завадзіць
+		лацінскія (польскія) літары, бо яны ўжо заведзены на ўсім культурным сьвеце; другія ізноў казалі, што з
+		найдаўнейшых часоў беларускія кнігі, дакумэнты, пісьмы і т. п. пісаліся рускімі літарамі, бо гэтак вучаць у
+		школах, а як яшчэ завядуць агульную, усенародную навуку, дык тады ня будзе чалавека, каторы ня знаў бы рускай
+		граматы.
+</span>
 
-</body>
-</html>
+<span>
+		Рэдакцыя ўсё ж такі не магла задзяржацца ні на тым, што раілі староньнікі лацінскага шрыфту, ні на радах
+		староньнікаў “гражданкі”. Выпускаючы ў сьвет першую беларускую газэту, мы разумелі, што яна дойдзе да ўсіх
+		беларусаў толькі тады, калі будзе друкавацца абодвымі шрыфтамі. Гэтага вымагала само жыцьцё: у нашай старонцы
+		ёсьць багата каталікоў, каторыя ня ходзяць у казённую школу і вучацца дома толькі лацінскай (ці польскай)
+		граматы, дык рускімі літарамі чытаць ня ўмеюць; ізноў жа праваслаўныя беларусы, хаця б і хацелі, зусім не маглі
+		б навучыцца лацінскай ці польскай граматы”.
+
+</span>
+		<span>“Наша Ніва, 1911 год, № 50</span>
+	</p>
+</div>
