--- a/www/app/national/templates/novy.html
+++ b/www/app/national/templates/novy.html
@@ -1,6 +1,6 @@
 <div class="img-push"></div>
 <div class="sun-postcard text-center">
-	<p class="antiqua-font img-title" style="font-size: 26px;">
+	<p class="antiqua-font img-title">
 		Газэта выходзіла два разы на тыдзень лацінкай і кірыліцай
 	</p>
 	<img src="css/img/national/homan.jpg"/>
