--- a/www/app/national/templates/sluck.html
+++ b/www/app/national/templates/sluck.html
@@ -1,5 +1,3 @@
 <div class="national-sluck-title antiqua-font">Слуцкі Збройны Чын</div>
 <div class="national-sluck"></div>
-<button class="button button-dark another-chronicle" ng-click="showActionSheet()">
-	Іншая Хроніка
-</button>
+<button class="button button-dark another-chronicle icon ion-clock" ng-click="showActionSheet()"></button>
