--- a/www/app/national/templates/idea-pull.html
+++ b/www/app/national/templates/idea-pull.html
@@ -5,8 +5,5 @@
         height="480"
         src="https://www.youtube.com/embed/WJre76c9hRU"
         frameborder="0"
-        allowfullscreen></iframe>
-<!--<div class="row">-->
-<!--<textarea class="pull-comment" placeholder="Камэнтарый"></textarea>-->
-<!--<button class="button button-balanced">Дадаць</button>-->
-<!--</div>-->
+        allowfullscreen>
+</iframe>
