--- a/www/app/national/templates/polska.html
+++ b/www/app/national/templates/polska.html
@@ -1,12 +1,12 @@
 <div class="img-push"></div>
 <div class="sun-postcard text-center">
-	<p class="antiqua-font img-title" style="font-size: 26px;">
+	<p class="antiqua-font img-title">
 		Юзэф Пілсудскі ў Мінску
 	</p>
 	<img src="css/img/national/pilsudski.jpg"/>
 </div>
-<div class="sun-postcard text-center" style="margin-top: 30px;">
-	<p class="antiqua-font img-title" style="font-size: 26px;">
+<div class="sun-postcard text-center">
+	<p class="antiqua-font img-title">
 		Польская марка прысвечана БНР
 	</p>
 	<img src="css/img/national/marka.jpg"/>
