Finished soviet chronicle.

--- a/www/app/soviet/templates/gallery-pull.html
+++ b/www/app/soviet/templates/gallery-pull.html
@@ -1,20 +1,16 @@
 <div class="row text-center">
-	<h2 class="pull-title truth-font">Телеграмма кайзеру Вильгельму II</h2>
+	<h2 class="pull-title truth-font">Герб Беларускай ССР</h2>
 </div>
 <div class="row">
 	<p class="pull-review slab-font">
-		25 красавіка 1918 года ў Берлін на імя кайзера Вільгельма II была накіраваная тэлеграма, якую падпісалі старшыня
-		Рады БНР Янка Серада, старшыня Народнага Сакратарыяту Язэп Варонка, сябры Рады Антон Аўсянік, Пятро Крэчэўскі,
-		Язэп Лёсік, Раман Скірмунт, Аляксандр Уласаў і Павел Аляксюк. Ад імя ўсёй Рады яны заявілі, што будучыню
-		Беларусі бачаць “толькі пад апекай германскай дзяржавы” — падпісанты спадзяваліся на змяненне адносінаў нямецкіх
-		акупацыйных уладаў да Рады БНР, якія заставаліся варожымі.
-
-		У выніку, адносіны Нямеччыны да БНР не змяніліся, а тэлеграма падштурхнула да расколу Беларускай Сацыялістычнай
-		Грамады і крызісу ўраду БНР. З яго выйшлі некалькі эсэраў і сацыял-дэмакратаў, а правыя здолелі ўтварыць новы
-		ўрад БНР, які, аднак, праіснаваў не доўга.
+		<span>
+			Дзяржаўны сымбаль Беларускай Савецкай Сацыялістычнай Рэспублікі. Герб Беларускай ССР грунтаваўся на гербе
+		Савецкага Саюзу. Быў прыняты 30 сакавіка 1927 году на паседжаньні Саўнаркаму БССР.
+		</span>
+		<span>
+		Канстытуцыя ССРБ (3.2.1919) у ст. 31 апісвала герб Беларусі:
+		залатыя серп і молат на чырвоным фоне ў прамянях узыходзячага сонцу, вакол — вянок з каласоў і надпісы:
+		«Сацыялістычная Савецкая Рэспубліка Беларусь» і «Пралетары ўсіх краін, злучайцеся!».
+	    </span>
 	</p>
 </div>
-<!--<div class="row">-->
-<!--<textarea class="pull-comment" placeholder="Камэнтарый"></textarea>-->
-<!--<button class="button button-balanced">Дадаць</button>-->
-<!--</div>-->
