--- a/www/app/soviet/templates/nezal-pull.html
+++ b/www/app/soviet/templates/nezal-pull.html
@@ -3,17 +3,9 @@
 </div>
 <div class="row">
 	<p class="pull-review slab-font">
-		Дзень Незалежнасці Рэспублікі Беларусь (Дзень Рэспублікі) — галоўнае дзяржаўнае свята. Адзначаецца 3 ліпеня — у
-		дзень вызвалення ў 1944 годзе горада Мінска ад нацысцкіх захопнікаў. Рашэнне аб святкаванні Дня Незалежнасці
-		Рэспублікі Беларусь 3 ліпеня было прынята на рэферэндуме 1996-га. Да таго часу ён адзначаўся 27 ліпеня — у гэты
-		дзень у 1990-м Вярхоўны Савет БССР прыняў дэкларацыю аб дзяржаўным суверэнітэце Беларусі.
-		Паштовая марка, прысвечаная Дню Незалежнасці
-		Галоўнае мерапрыемства свята — урачысты парад. У Мінску ён праводзіцца на праспекце Пераможцаў і нагадвае аб
-		тым, што беларускі народ цаной неймаверных страт заваяваў свабоду краіны, а таксама дэманструе дасягненні
-		суверэннай Беларусі.
+		25 марта 1918 года представители белорусского национального движения в условиях германской оккупации объявили о
+		создании независимой Белорусской Народной Республики (БНР). После поражения Германии в Первой мировой войне и
+		эвакуации германских войск в декабре 1918 года большая часть территории БНР была занята Красной Армией РСФСР,
+		правительство БНР переехало в Гродно, впоследствии частично находилось в Ковно (Каунасе).
 	</p>
 </div>
-<!--<div class="row">-->
-<!--<textarea class="pull-comment" placeholder="Камэнтарый"></textarea>-->
-<!--<button class="button button-balanced">Дадаць</button>-->
-<!--</div>-->
