--- a/www/app/soviet/templates/sluck-pull.html
+++ b/www/app/soviet/templates/sluck-pull.html
@@ -14,9 +14,5 @@
         height="480"
         src="https://www.youtube.com/embed/Ud-nhwpTxjg"
         frameborder="0"
-        allowfullscreen></iframe>
-
-<!--<div class="row">-->
-<!--<textarea class="pull-comment" placeholder="Камэнтарый"></textarea>-->
-<!--<button class="button button-balanced">Дадаць</button>-->
-<!--</div>-->
+        allowfullscreen>
+</iframe>
