--- a/www/app/soviet/templates/sluck.html
+++ b/www/app/soviet/templates/sluck.html
@@ -1,5 +1,3 @@
 <div class="soviet-sluck-title truth-font">Слуцкое восстание</div>
 <div class="soviet-sluck"></div>
-<button class="button button-dark another-chronicle" ng-click="showActionSheet()">
-	Іншая Хроніка
-</button>
+<button class="button button-dark another-chronicle icon ion-clock" ng-click="showActionSheet()"></button>
