Finished modern chronicle.

--- a/www/app/modern/templates/pixelate.html
+++ b/www/app/modern/templates/pixelate.html
@@ -1,5 +1,7 @@
 <div class="sun-postcard text-center">
-
+	<p class="helvetica-font text-white img-title">
+		Нацыянальны сымбаль
+	</p>
 	<img src="css/img/modern/pixelate.jpg"/>
 </div>
 
