--- a/www/app/modern/templates/sluck.html
+++ b/www/app/modern/templates/sluck.html
@@ -4,6 +4,4 @@
 <div class="modern-sluck"></div>
 <div class="modern-sluck2"></div>
 <div class="modern-sluck3"></div>
-<button class="button button-dark another-chronicle-modern" ng-click="showActionSheet()">
-	Іншая Хроніка
-</button>
+<button class="button button-dark another-chronicle-modern icon ion-clock" ng-click="showActionSheet()"></button>
