--- a/www/app/modern/templates/sluck-pull.html
+++ b/www/app/modern/templates/sluck-pull.html
@@ -1,5 +1,5 @@
 <div class="row text-center">
-	<h2 class="pull-title helvetica-font">Слуцкі Збройны Чын</h2>
+	<h2 class="pull-title helvetica-font modern">Слуцкі Збройны Чын</h2>
 </div>
 <iframe width="854"
         height="480"
@@ -7,7 +7,3 @@
         frameborder="0"
         allowfullscreen>
 </iframe>
-<!--<div class="row">-->
-<!--<textarea class="pull-comment" placeholder="Камэнтарый"></textarea>-->
-<!--<button class="button button-balanced">Дадаць</button>-->
-<!--</div>-->
