Fixed youtube video

--- a/www/app/modern/templates/kvitki-pull.html
+++ b/www/app/modern/templates/kvitki-pull.html
@@ -1,7 +1,7 @@
 <div class="row text-center">
 	<h2 class="pull-title modern helvetica-font">«Тутэйшыя»</h2>
 </div>
-<iframe width="854" height="480" src="https://www.youtube.com/embed/V7tCicTx1_I" frameborder="0" allowfullscreen></iframe>
+<iframe width="854" height="480" ng-src="https://www.youtube.com/embed/V7tCicTx1_I" frameborder="0" allowfullscreen></iframe>
 <div class="row">
 	<p class="pull-review helvetica-font">
 		<span>
