--- a/www/app/national/templates/idea-pull.html
+++ b/www/app/national/templates/idea-pull.html
@@ -3,7 +3,7 @@
 </div>
 <iframe width="854"
         height="480"
-        src="https://www.youtube.com/embed/WJre76c9hRU"
+        ng-src="https://www.youtube.com/embed/WJre76c9hRU"
         frameborder="0"
         allowfullscreen>
 </iframe>
