--- a/www/app/national/templates/sluck-pull.html
+++ b/www/app/national/templates/sluck-pull.html
@@ -10,7 +10,7 @@
 </div>
 <iframe width="854"
         height="480"
-        src="https://www.youtube.com/embed/92IDnBtjr_g"
+        ng-src="https://www.youtube.com/embed/92IDnBtjr_g"
         frameborder="0"
         allowfullscreen>
 </iframe>
