--- a/www/app/soviet/templates/sluck-pull.html
+++ b/www/app/soviet/templates/sluck-pull.html
@@ -12,7 +12,7 @@
 </div>
 <iframe width="854"
         height="480"
-        src="https://www.youtube.com/embed/Ud-nhwpTxjg"
+        ng-src="https://www.youtube.com/embed/Ud-nhwpTxjg"
         frameborder="0"
         allowfullscreen>
 </iframe>
