--- a/www/app/modern/templates/sluck-pull.html
+++ b/www/app/modern/templates/sluck-pull.html
@@ -3,7 +3,7 @@
 </div>
 <iframe width="854"
         height="480"
-        src="https://www.youtube.com/embed/f0KFR1pXTF4"
+        ng-src="https://www.youtube.com/embed/f0KFR1pXTF4"
         frameborder="0"
         allowfullscreen>
 </iframe>
