Fix style bugs.

--- a/www/app/modern/templates/sluck.html
+++ b/www/app/modern/templates/sluck.html
@@ -1,4 +1,4 @@
-<div class="modern-bnr impact-font">
+<div class="modern-bnr helvetica-font">
 	Б<span class="ion-help"></span>Р
 </div>
 <div class="modern-sluck"></div>
