--- a/www/app/national/templates/repressions.html
+++ b/www/app/national/templates/repressions.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="button-bar">
 
-				<button class="button button-clear button-dark" ng-click="goToDetails(index)">
+				<button class="button button-clear button-dark">
 					<span class="swipe-card-title">{{card.title}}</span>
 				</button>
 			</div>
