Fix youtube video.

--- a/www/app/soviet/templates/sluck-pull.html
+++ b/www/app/soviet/templates/sluck-pull.html
@@ -1,18 +1,20 @@
-<div class="row text-center">
-	<h2 class="pull-title truth-font">Слуцкое восстание</h2>
+<div reload-youtube>
+	<div class="row text-center">
+		<h2 class="pull-title truth-font">Слуцкое восстание</h2>
+	</div>
+	<div class="row">
+		<p class="pull-review slab-font">
+			Историк А. Грицкевич указывает на тот факт, что руководитель советской делегации А. Иоффе предлагал уступить
+			Польше всю территорию БССР взамен на территориальные уступки на Украине, однако польская сторона не приняла это
+			предложение.
+			Согласно принятому соглашению, демаркационная линия Киевичи-Лань проходила таким образом, что Слуцкий уезд
+			должен был отойти к Белорусской ССР, за Польшей оставались только некоторые западные волости.
+		</p>
+	</div>
+	<iframe width="854"
+	        height="480"
+	        ng-src="https://www.youtube.com/embed/Ud-nhwpTxjg"
+	        frameborder="0"
+	        allowfullscreen>
+	</iframe>
 </div>
-<div class="row">
-	<p class="pull-review slab-font">
-		Историк А. Грицкевич указывает на тот факт, что руководитель советской делегации А. Иоффе предлагал уступить
-		Польше всю территорию БССР взамен на территориальные уступки на Украине, однако польская сторона не приняла это
-		предложение.
-		Согласно принятому соглашению, демаркационная линия Киевичи-Лань проходила таким образом, что Слуцкий уезд
-		должен был отойти к Белорусской ССР, за Польшей оставались только некоторые западные волости.
-	</p>
-</div>
-<iframe width="854"
-        height="480"
-        ng-src="https://www.youtube.com/embed/Ud-nhwpTxjg"
-        frameborder="0"
-        allowfullscreen>
-</iframe>
