Fix youtube video.

--- a/www/app/modern/templates/cards-pull.html
+++ b/www/app/modern/templates/cards-pull.html
@@ -1,4 +1,10 @@
-<div class="row text-center">
-	<h2 class="pull-title helvetica-font modern">Дзеячы БНР</h2>
+<div reload-youtube>
+	<div class="row text-center">
+		<h2 class="pull-title helvetica-font modern">Дзеячы БНР</h2>
+	</div>
+	<iframe width="854"
+	        height="480"
+	        ng-src="https://www.youtube.com/embed/nlJnqyTIP1k"
+	        frameborder="0"
+	        allowfullscreen></iframe>
 </div>
-<iframe width="854" height="480" ng-src="https://www.youtube.com/embed/nlJnqyTIP1k" frameborder="0" allowfullscreen></iframe>
