--- a/www/app/modern/templates/kvitki-pull.html
+++ b/www/app/modern/templates/kvitki-pull.html
@@ -1,14 +1,20 @@
-<div class="row text-center">
-	<h2 class="pull-title modern helvetica-font">«Тутэйшыя»</h2>
-</div>
-<iframe width="854" height="480" ng-src="https://www.youtube.com/embed/V7tCicTx1_I" frameborder="0" allowfullscreen></iframe>
-<div class="row">
-	<p class="pull-review helvetica-font">
+<div reload-youtube>
+	<div class="row text-center">
+		<h2 class="pull-title modern helvetica-font">«Тутэйшыя»</h2>
+	</div>
+	<iframe width="854"
+	        height="480"
+	        ng-src="https://www.youtube.com/embed/V7tCicTx1_I"
+	        frameborder="0"
+	        allowfullscreen></iframe>
+	<div class="row">
+		<p class="pull-review helvetica-font">
 		<span>
 			Сатырычная трагікамэдыя Янкі Купалы (у вызначэньні аўтара — «трагічна—сьмяшлівыя сцэны ў 4-х дзеях»). П'еса завершаная ў жніўні 1922 году.
 		</span>
 		<span>
 			У 1927 годзе, неўзабаве пасьля выхаду ў сьвет, быў забаронены трэці том першага «Збору твораў» Купалы, дзе была надрукаваная п'еса.
 		</span>
-	</p>
+		</p>
+	</div>
 </div>
