--- a/www/app/national/templates/idea-pull.html
+++ b/www/app/national/templates/idea-pull.html
@@ -1,9 +1,11 @@
-<div class="row text-center">
-	<h2 class="pull-title antiqua-font">Зянон Пазьняк пра БНР</h2>
+<div reload-youtube>
+	<div class="row text-center">
+		<h2 class="pull-title antiqua-font">Зянон Пазьняк пра БНР</h2>
+	</div>
+	<iframe width="854"
+	        height="480"
+	        ng-src="https://www.youtube.com/embed/WJre76c9hRU"
+	        frameborder="0"
+	        allowfullscreen>
+	</iframe>
 </div>
-<iframe width="854"
-        height="480"
-        ng-src="https://www.youtube.com/embed/WJre76c9hRU"
-        frameborder="0"
-        allowfullscreen>
-</iframe>
