--- a/www/app/modern/templates/sluck-pull.html
+++ b/www/app/modern/templates/sluck-pull.html
@@ -1,9 +1,11 @@
-<div class="row text-center">
-	<h2 class="pull-title helvetica-font modern">Слуцкі Збройны Чын</h2>
+<div reload-youtube>
+	<div class="row text-center">
+		<h2 class="pull-title helvetica-font modern">Слуцкі Збройны Чын</h2>
+	</div>
+	<iframe width="854"
+	        height="480"
+	        ng-src="https://www.youtube.com/embed/f0KFR1pXTF4"
+	        frameborder="0"
+	        allowfullscreen>
+	</iframe>
 </div>
-<iframe width="854"
-        height="480"
-        ng-src="https://www.youtube.com/embed/f0KFR1pXTF4"
-        frameborder="0"
-        allowfullscreen>
-</iframe>
