--- a/www/app/national/templates/sluck-pull.html
+++ b/www/app/national/templates/sluck-pull.html
@@ -1,16 +1,19 @@
-<div class="row text-center">
-	<h2 class="pull-title antiqua-font">Слуцкі збройны чын</h2>
+<div reload-youtube>
+	<div class="row text-center">
+		<h2 class="pull-title antiqua-font">Слуцкі збройны чын</h2>
+	</div>
+	<div class="row">
+		<p class="pull-review antiqua-font">
+			Слуцкі збройны чын, Слуцкі збройны ўздым, Слуцкае паўстаньне — спроба ўзброенай абароны незалежнасьці
+			Беларусі ў
+			раёне Слуцку ў лістападзе і сьнежні 1920 году. Прыкладна месяц беларускія вайсковыя аддзелы, сфармаваныя
+			пераважна зь мясцовых сялянаў, аказвалі супраціў наступаўшым савецкім войскам.
+		</p>
+	</div>
+	<iframe width="854"
+	        height="480"
+	        ng-src="https://www.youtube.com/embed/92IDnBtjr_g"
+	        frameborder="0"
+	        allowfullscreen>
+	</iframe>
 </div>
-<div class="row">
-	<p class="pull-review antiqua-font">
-		Слуцкі збройны чын, Слуцкі збройны ўздым, Слуцкае паўстаньне — спроба ўзброенай абароны незалежнасьці Беларусі ў
-		раёне Слуцку ў лістападзе і сьнежні 1920 году. Прыкладна месяц беларускія вайсковыя аддзелы, сфармаваныя
-		пераважна зь мясцовых сялянаў, аказвалі супраціў наступаўшым савецкім войскам.
-	</p>
-</div>
-<iframe width="854"
-        height="480"
-        ng-src="https://www.youtube.com/embed/92IDnBtjr_g"
-        frameborder="0"
-        allowfullscreen>
-</iframe>
