Added fake comments.

--- a/www/app/modern/templates/cheb-pull.html
+++ b/www/app/modern/templates/cheb-pull.html
@@ -8,3 +8,4 @@
 		яшчэ ў сярэдзіне сакавіка была арэндаваная ў сялянскага пазямельнага банку зала для пасяджэнняў.
 	</p>
 </div>
+<div ng-include="'app/modern/templates/modern-comments.html'"></div>
