--- a/www/app/modern/templates/kvitki-pull.html
+++ b/www/app/modern/templates/kvitki-pull.html
@@ -1,4 +1,4 @@
-<div reload-youtube>
+<div reload-youtube class="youtube-push">
 	<div class="row text-center">
 		<h2 class="pull-title modern helvetica-font">«Тутэйшыя»</h2>
 	</div>
@@ -18,3 +18,4 @@
 		</p>
 	</div>
 </div>
+<div ng-include="'app/modern/templates/modern-comments.html'"></div>
