--- a/www/app/modern/templates/mova-pull.html
+++ b/www/app/modern/templates/mova-pull.html
@@ -11,3 +11,4 @@
 		другой(ие) язык(и), которым(и) свободно владеет респондент.
 	</p>
 </div>
+<div ng-include="'app/modern/templates/modern-comments.html'"></div>
