--- a/www/app/modern/templates/move-pull.html
+++ b/www/app/modern/templates/move-pull.html
@@ -11,3 +11,4 @@
 		вярнуўся на некалькі месяцаў у Менск, акупаваны польскімі войскамі.
 	</p>
 </div>
+<div ng-include="'app/modern/templates/modern-comments.html'"></div>
