--- a/www/app/modern/templates/pass-pull.html
+++ b/www/app/modern/templates/pass-pull.html
@@ -10,3 +10,4 @@
 		мяжу. Афіцыйныя ўрадавыя асобы БНР мелі дыпламатычныя пашпарты.
 	</p>
 </div>
+<div ng-include="'app/modern/templates/modern-comments.html'"></div>
