--- a/www/app/modern/templates/points-pull.html
+++ b/www/app/modern/templates/points-pull.html
@@ -11,3 +11,4 @@
 		вайсковых спраў ва ўрадзе Скірмунта генерал Кіпрыян Кандратовіч (1859-1932).
 	</p>
 </div>
+<div ng-include="'app/modern/templates/modern-comments.html'"></div>
