--- a/www/app/national/templates/alphabet-pull.html
+++ b/www/app/national/templates/alphabet-pull.html
@@ -8,3 +8,4 @@
 		мінулым вялікалітоўскія татары пісалі на беларускай мове арабскім пісьмом — арабіцай.
 	</p>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
