--- a/www/app/national/templates/bssr-pull.html
+++ b/www/app/national/templates/bssr-pull.html
@@ -10,3 +10,4 @@
 		беларуская (з 12.04.1918). Часовая канстытуцыя ад 11 кастрычніка 1918. Выдача пашпартоў.
 	</p>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
