--- a/www/app/national/templates/circle-pull.html
+++ b/www/app/national/templates/circle-pull.html
@@ -9,3 +9,5 @@
 		Пасьля Другой сусьветнай вайны БССР стала адным зь сяброў-заснавальнікаў Арганізацыі Аб’яднаных Нацыяў.
 	</p>
 </div>
+
+<div ng-include="'app/national/templates/national-comments.html'"></div>
