--- a/www/app/national/templates/idea-pull.html
+++ b/www/app/national/templates/idea-pull.html
@@ -1,4 +1,4 @@
-<div reload-youtube>
+<div reload-youtube class="youtube-push">
 	<div class="row text-center">
 		<h2 class="pull-title antiqua-font">Зянон Пазьняк пра БНР</h2>
 	</div>
@@ -9,3 +9,4 @@
 	        allowfullscreen>
 	</iframe>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
