--- a/www/app/national/templates/lacinka-pull.html
+++ b/www/app/national/templates/lacinka-pull.html
@@ -8,3 +8,4 @@
 		запісу беларускага (кірылаўскага) тэксту ў лацінскай сістэме пісьма.
 	</p>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
