--- a/www/app/national/templates/map-pull.html
+++ b/www/app/national/templates/map-pull.html
@@ -11,3 +11,4 @@
 		пачатку перамоваў, але яе паўнамоцтвы не былі прызнаныя польскім бокам. Р\
 	</p>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
