--- a/www/app/national/templates/mova-pull.html
+++ b/www/app/national/templates/mova-pull.html
@@ -9,3 +9,4 @@
 		нацыянальна-культурнага адраджэння і моцным штуршком развіцця прафесійнай беларускамоўнай культуры.
 	</p>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
