--- a/www/app/national/templates/novy-pull.html
+++ b/www/app/national/templates/novy-pull.html
@@ -29,3 +29,4 @@
 		<span>“Наша Ніва, 1911 год, № 50</span>
 	</p>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
