--- a/www/app/national/templates/repressions-pull.html
+++ b/www/app/national/templates/repressions-pull.html
@@ -10,3 +10,4 @@
 		за 200 тыс. ахвяраў палітычных рэпрэсіяў.
 	</p>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
