--- a/www/app/national/templates/tarashkevich-pull.html
+++ b/www/app/national/templates/tarashkevich-pull.html
@@ -11,3 +11,4 @@
 		знаходзілася ў афіцыйным ужытку да рэформы беларускага правапісу 1933 году.
 	</p>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
