--- a/www/app/national/templates/u-pull.html
+++ b/www/app/national/templates/u-pull.html
@@ -9,3 +9,4 @@
 		ўжытая ў кракаўскім выданьні Францішка Багушэвіча «Dudka Białaruskaja» 1891 году.
 	</p>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
