--- a/www/app/national/templates/udzelniki-pull.html
+++ b/www/app/national/templates/udzelniki-pull.html
@@ -33,3 +33,4 @@
 		а таксама прадстаўнікі нацыянальных меншасцей, земстваў і гарадоў.
 	</p>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
