--- a/www/app/soviet/templates/bssr-pull.html
+++ b/www/app/soviet/templates/bssr-pull.html
@@ -14,3 +14,4 @@
 		сфарміраваліся ўнутры дзяржавы, у гістарычнай рэчаіснасці.
 	</p>
 </div>
+<div ng-include="'app/soviet/templates/soviet-comments.html'"></div>
