--- a/www/app/soviet/templates/nezal-pull.html
+++ b/www/app/soviet/templates/nezal-pull.html
@@ -9,3 +9,4 @@
 		правительство БНР переехало в Гродно, впоследствии частично находилось в Ковно (Каунасе).
 	</p>
 </div>
+<div ng-include="'app/soviet/templates/soviet-comments.html'"></div>
