--- a/www/app/soviet/templates/reforma-pull.html
+++ b/www/app/soviet/templates/reforma-pull.html
@@ -12,3 +12,4 @@
 		заграничных слов, совместно с созданием новых правил (правописание имён и географических названий)».
 	</p>
 </div>
+<div ng-include="'app/soviet/templates/soviet-comments.html'"></div>
