--- a/www/app/soviet/templates/repressions-pull.html
+++ b/www/app/soviet/templates/repressions-pull.html
@@ -10,3 +10,4 @@
 		акупацыйных уладаў да Рады БНР, якія заставаліся варожымі.
 	</p>
 </div>
+<div ng-include="'app/soviet/templates/soviet-comments.html'"></div>
