--- a/www/app/soviet/templates/sluck-pull.html
+++ b/www/app/soviet/templates/sluck-pull.html
@@ -1,4 +1,4 @@
-<div reload-youtube>
+<div reload-youtube class="youtube-push">
 	<div class="row text-center">
 		<h2 class="pull-title truth-font">Слуцкое восстание</h2>
 	</div>
@@ -18,3 +18,4 @@
 	        allowfullscreen>
 	</iframe>
 </div>
+<div ng-include="'app/soviet/templates/soviet-comments.html'"></div>
