--- a/www/app/soviet/templates/souz-pull.html
+++ b/www/app/soviet/templates/souz-pull.html
@@ -10,3 +10,4 @@
 		издательство антирелигиозной литературы (ГАИЗ)) выпустило большое количество атеистической литературы.
 	</p>
 </div>
+<div ng-include="'app/soviet/templates/soviet-comments.html'"></div>
