--- a/www/app/modern/templates/cards-pull.html
+++ b/www/app/modern/templates/cards-pull.html
@@ -1,4 +1,4 @@
-<div reload-youtube>
+<div reload-youtube class="youtube-push">
 	<div class="row text-center">
 		<h2 class="pull-title helvetica-font modern">Дзеячы БНР</h2>
 	</div>
@@ -8,3 +8,4 @@
 	        frameborder="0"
 	        allowfullscreen></iframe>
 </div>
+<div ng-include="'app/modern/templates/modern-comments.html'"></div>
