--- a/www/app/national/templates/sluck-pull.html
+++ b/www/app/national/templates/sluck-pull.html
@@ -1,4 +1,4 @@
-<div reload-youtube>
+<div reload-youtube class="youtube-push">
 	<div class="row text-center">
 		<h2 class="pull-title antiqua-font">Слуцкі збройны чын</h2>
 	</div>
@@ -17,3 +17,4 @@
 	        allowfullscreen>
 	</iframe>
 </div>
+<div ng-include="'app/national/templates/national-comments.html'"></div>
