--- a/www/app/modern/templates/modern-comments.html
+++ b/www/app/modern/templates/modern-comments.html
@@ -1,4 +1,4 @@
-<div ng-controller="modernController">
+<div ng-controller="modernController" ng-show="options.comments">
 	<button
 		ng-init="showComments = false"
 		ng-click="showComments = !showComments"
