--- a/www/app/national/templates/national-comments.html
+++ b/www/app/national/templates/national-comments.html
@@ -1,4 +1,4 @@
-<div ng-controller="nationalController">
+<div ng-controller="nationalController" ng-show="options.comments">
 	<button
 		ng-init="showComments = false"
 		ng-click="showComments = !showComments"
