--- a/www/app/soviet/templates/soviet-comments.html
+++ b/www/app/soviet/templates/soviet-comments.html
@@ -1,4 +1,4 @@
-<div ng-controller="sovietController">
+<div ng-controller="sovietController" ng-show="options.comments">
 	<button
 		ng-init="showComments = false"
 		ng-click="showComments = !showComments"
