Fix style bugs.

--- a/www/app/soviet/templates/sluck-pull.html
+++ b/www/app/soviet/templates/sluck-pull.html
@@ -5,7 +5,8 @@
 	<div class="row">
 		<p class="pull-review slab-font">
 			Историк А. Грицкевич указывает на тот факт, что руководитель советской делегации А. Иоффе предлагал уступить
-			Польше всю территорию БССР взамен на территориальные уступки на Украине, однако польская сторона не приняла это
+			Польше всю территорию БССР взамен на территориальные уступки на Украине, однако польская сторона не приняла
+			это
 			предложение.
 			Согласно принятому соглашению, демаркационная линия Киевичи-Лань проходила таким образом, что Слуцкий уезд
 			должен был отойти к Белорусской ССР, за Польшей оставались только некоторые западные волости.
@@ -13,7 +14,7 @@
 	</div>
 	<iframe width="854"
 	        height="480"
-	        ng-src="https://www.youtube.com/embed/Ud-nhwpTxjg"
+	        src="https://www.youtube.com/embed/V4B4Vi402PE"
 	        frameborder="0"
 	        allowfullscreen>
 	</iframe>
