Fix style bugs.

--- a/www/app/soviet/templates/bnr-pull.html
+++ b/www/app/soviet/templates/bnr-pull.html
@@ -1,12 +1,11 @@
 <div class="row text-center">
-	<h2 class="pull-title truth-font">Ликвидация Рады БНР</h2>
+	<h2 class="pull-title truth-font">Эмиграция Рады БНР</h2>
 </div>
 <div class="row">
 	<p class="pull-review slab-font">
-		Оосенью 1925 года, произошло драматическое событие: раскол в руководстве Белорусской Народной Республики и
-		декларационная сдача министрами-эмигрантами своих полномочий в пользу Советской Белоруссии. Но затем, когда
-		«блудные сыновья» пересекут границу СССР и получат советское гражданство, первоначальный сценарий их прощения
-		будет зачеркнут.
+		24 марта 1923 года польский сейм ратифицировал решение о принятии Виленского края в состав Польши. После этого
+		литовское руководство потеряло интерес к сотрудничеству с Радой БНР и отказалось финансировать её деятельность.
+		В ноябре 1923 года члены правительства БНР покинули Каунас и переехали в Прагу.
 	</p>
 </div>
 <div ng-include="'app/soviet/templates/soviet-comments.html'"></div>
