--- a/www/app/soviet/templates/likv-pull.html
+++ b/www/app/soviet/templates/likv-pull.html
@@ -3,7 +3,7 @@
 </div>
 <div class="row">
 	<p class="pull-review slab-font">
-		Оосенью 1925 года, произошло драматическое событие: раскол в руководстве Белорусской Народной Республики и
+		Осенью 1925 года, произошло драматическое событие: раскол в руководстве Белорусской Народной Республики и
 		декларационная сдача министрами-эмигрантами своих полномочий в пользу Советской Белоруссии. Но затем, когда
 		«блудные сыновья» пересекут границу СССР и получат советское гражданство, первоначальный сценарий их прощения
 		будет зачеркнут.
