--- a/www/app/national/templates/sluck-pull.html
+++ b/www/app/national/templates/sluck-pull.html
@@ -12,9 +12,8 @@
 	</div>
 	<iframe width="854"
 	        height="480"
-	        ng-src="https://www.youtube.com/embed/92IDnBtjr_g"
+	        src="https://www.youtube.com/embed/5hh6ZdJ52ss"
 	        frameborder="0"
-	        allowfullscreen>
-	</iframe>
+	        allowfullscreen></iframe>
 </div>
 <div ng-include="'app/national/templates/national-comments.html'"></div>
