--- a/www/app/soviet/templates/repressions-pull.html
+++ b/www/app/soviet/templates/repressions-pull.html
@@ -1,13 +1,10 @@
 <div class="row text-center">
-	<h2 class="pull-title truth-font">Телеграмма кайзеру Вильгельму II</h2>
+	<h2 class="pull-title truth-font">Капитуляция БНР</h2>
 </div>
 <div class="row">
 	<p class="pull-review slab-font">
-		25 красавіка 1918 года ў Берлін на імя кайзера Вільгельма II была накіраваная тэлеграма, якую падпісалі старшыня
-		Рады БНР Янка Серада, старшыня Народнага Сакратарыяту Язэп Варонка, сябры Рады Антон Аўсянік, Пятро Крэчэўскі,
-		Язэп Лёсік, Раман Скірмунт, Аляксандр Уласаў і Павел Аляксюк. Ад імя ўсёй Рады яны заявілі, што будучыню
-		Беларусі бачаць “толькі пад апекай германскай дзяржавы” — падпісанты спадзяваліся на змяненне адносінаў нямецкіх
-		акупацыйных уладаў да Рады БНР, якія заставаліся варожымі.
+		В Берлине в октябре 1924 года поворотное событие: публичная капитуляция лидеров
+		Белорусской Народной Республики с последующей просьбой принять их на родине — теперь уже советской.
 	</p>
 </div>
 <div ng-include="'app/soviet/templates/soviet-comments.html'"></div>
